crates/pardosa-file/tests/syncable_seal/downstream_impl_denied.stderr
error[E0046]: not all trait items implemented, missing: `set_len`
  --> tests/syncable_seal/downstream_impl_denied.rs:15:1
   |
15 | impl Syncable for DownstreamSink {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `set_len` in implementation
   |
   = help: implement the missing item: `fn set_len(&mut self, _: u64) -> Result<(), std::io::Error> { todo!() }`

error[E0277]: the trait bound `DownstreamSink: pardosa_file::syncable::sealed::Sealed` is not satisfied
  --> tests/syncable_seal/downstream_impl_denied.rs:15:19
   |
15 | impl Syncable for DownstreamSink {
   |                   ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `pardosa_file::syncable::sealed::Sealed` is not implemented for `DownstreamSink`
  --> tests/syncable_seal/downstream_impl_denied.rs:6:1
   |
 6 | struct DownstreamSink;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `pardosa_file::syncable::sealed::Sealed`:
             &mut W
             BufWriter<W>
             File
             Vec<u8>
             std::io::Cursor<Vec<u8>>
note: required by a bound in `Syncable`
  --> src/syncable.rs
   |
   | pub trait Syncable: Write + sealed::Sealed {
   |                             ^^^^^^^^^^^^^^ required by this bound in `Syncable`
   = note: `Syncable` is a "sealed trait", because to implement it you also need to implement `pardosa_file::syncable::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             std::vec::Vec<u8>
             std::io::Cursor<std::vec::Vec<u8>>
             std::fs::File
             std::io::BufWriter<W>
             &mut W
             pardosa_file::test_support::FailureSink
